infra/k8s/kubero-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubero
  namespace: kubero
spec:
  ingressClassName: traefik
  rules:
    - host: kubero.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubero
                port:
                  number: 2000
